# pretty_tools

./: .gitignore  CMakeLists.txt  LICENSE  PrettyToolsConfig.cmake.in  pretty_tools-config.cmake.in  quick_docs.sh  readme.md  requirements.txt  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/css/: pyg.css  x_contion.css
docs/source/_templates/: detail.rst
docs/source/introduce/: install.rst
docs/source/module/: datastruct.rst  echo.rst  multi_works.rst  resources.rst  transform.rst  visualization.rst
inc/datastruct/: BitArray.h
pretty_tools/: __init__.py  requirements.txt
pretty_tools/_C_pretty_tools/: __init__.pyi
pretty_tools/_C_pretty_tools/datastruct/: __init__.pyi  bbox_11.pyi  misc_11.pyi
pretty_tools/analysis/: __init__.py  time_recoder.py  tool_readme.md
pretty_tools/config/: __init__.py  default_config.py
pretty_tools/datastruct/: .gitignore  X_bbox.py  _C_graph_enhance.pyi  _C_misc.pyi  _C_np_enhance.pyi  __init__.py  bbox_convert.py  bbox_convert_np.py  color_convert.py  cython_bbox.pyi  distance.py  general_ann.py  graph_enhance.py  itertools_plus.py  misc.py  multi_index_dict.py  np_enhance.py  numpy_bbox.py  recommend_tools.ipynb  torch_bbox.py  torch_enhance.py  track_graph.py  track_instance.py
pretty_tools/datastruct/src/: _C_graph_enhance.pyx  _C_misc.pyx  _C_np_enhance.pyx  cython_bbox.pyx
pretty_tools/echo/: __init__.py  core.py  echo_resource.py  message.py  x_logging.py  x_progress.py  x_table.py  x_timer.py
pretty_tools/echo/echo_column/: pretty_column.py
pretty_tools/metrics/: __init__.py  match.py
pretty_tools/multi_works/: __init__.py  multi_process.py  multi_thread.py
pretty_tools/resources/: __init__.py
pretty_tools/resources/data/: floor1_00000001.pkl  floor2_00000001.pkl  floor3_00000001.pkl  test_feat_20x2048.txt  test_feat_9x2048.npy  test_generalann.pkl
pretty_tools/solver/: match_utils.py
pretty_tools/solver/src/: nms.pyx
pretty_tools/test/: __ini__.py  core.py  test_11_cython.py  test_datastruct.py  test_echo.py  test_metrics.py  test_misc.py  test_visualization.py
pretty_tools/test/base/: http_api.py
pretty_tools/transform/: __init__.py  pretty_transform.py
pretty_tools/video/: __init__.py  backend_dali.py  backend_deffcode.py  backend_vpf.py  core.py  merge_imgs.sh  readme.md  video_batch.py
pretty_tools/visualization/: .gitignore  __init__.py  color.py  core.py  quick_show.py
pretty_tools/visualization/display_flask/: app_register.py  flask_app.py  model.py
pretty_tools/visualization/display_flask/models/: __init__.py  model_images.py
pretty_tools/visualization/display_streamlit/: streamlist_app_mtmct.py
pretty_tools/visualization/draw/: __init__.py  draw.py  draw_base.py  draw_graph.py  draw_track.py  draw_track_mtmct.py  matplotlib_misc.py  tmp.ipynb
pretty_tools_cpp/: export.cpp  opaque_types.hpp
pretty_tools_cpp/datastruct/: _bbox.cpp  _misc_11.cpp  datastruct_export.cpp  datastruct_modules.hpp
src/datastruct/: BitArray.cc
